<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mbf_simple_core</name>
  <version>1.0.4</version>
  <description>
    This package provides common interfaces for navigation specific robot actions. It contains the SimplePlanner, SimpleController and SimpleRecovery interfaces. The interfaces have to be implemented by the plugins to make them available for Move Base Flex using the mbf_simple_nav navigation implementation. That implementation inherits the mbf_abstract_nav implementation and there is no binding to a map representation.
  </description>

  <maintainer email="alexander.mock@naturerobots.com">Alexander Mock</maintainer>
  <license>BSD-3-Clause</license>

  <url>http://github.com/naturerobots/move_base_flex</url>
  <author email="santos@magazino.eu">Jorge Santos</author>
  <author email="sebastian.puetz@naturerobots.com">Sebastian Pütz</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>mbf_abstract_core</depend>
  <depend>mbf_utility</depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>

</package>
