<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>move_base_flex</name>
  <version>1.0.4</version>
  <description>
       Move Base Flex (MBF) is a backwards-compatible replacement for move_base. MBF can use existing plugins for move_base, and provides an enhanced version of the planner, controller and recovery plugin ROS interfaces. It exposes action servers for planning, controlling and recovering, providing detailed information of the current state and the plugin’s feedback. An external executive logic can use MBF and its actions to perform smart and flexible navigation strategies. Furthermore, MBF enables the use of other map representations, e.g. meshes or grid_map
       
       This package is a meta package and refers to the Move Base Flex stack packages.The abstract core of MBF – without any binding to a map representation – is represented by the <a href="http://github.com/naturerobots/move_base_flex">mbf_abstract_nav</a> and the <a href="http://github.com/naturerobots/move_base_flex">mbf_abstract_core</a>. For navigation on costmaps see <a href="http://github.com/naturerobots/move_base_flex">mbf_costmap_nav</a> and <a href="http://github.com/naturerobots/move_base_flex">mbf_costmap_core</a>.
  </description>

  <maintainer email="alexander.mock@naturerobots.com">Alexander Mock</maintainer>
  <license>BSD-3-Clause</license>

  <url>http://github.com/naturerobots/move_base_flex</url>
  <author email="sebastian.puetz@naturerobots.com">Sebastian Pütz</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>mbf_abstract_core</exec_depend>
  <exec_depend>mbf_abstract_nav</exec_depend>
  <exec_depend>mbf_msgs</exec_depend>
  <exec_depend>mbf_simple_nav</exec_depend>
  <exec_depend>mbf_utility</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
